<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_subject"
        android:icon="@drawable/book"
        android:title="Subject" />

    <item
        android:id="@+id/nav_attendance"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/nav_attendance" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_qr"
        android:icon="@drawable/qr_code"
        android:title="QR Code" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
